little changes css

--- a/app/assets/stylesheets/drink.css.sass
+++ b/app/assets/stylesheets/drink.css.sass
@@ -43,13 +43,13 @@
 // show drink
 .drink-detail
   background: white
+  padding: 10px 10px 25px 10px
   legend
     text-align: center
     text-transform: uppercase
   p
     text-align: justify
   .panel-left
-    padding: 15px
     .ingredients-drink
       // padding: 5px 5px 15px 10px
       text-align: center
@@ -65,9 +65,12 @@
           font-size: 25px
   .panel-right
     text-align: center
-    padding-top: 10%
+    padding-top: 5%
     .placeholder-drink
       padding-bottom: 10px
+      svg#circle-mug
+        width: 200px
+        height: 200px
     #label-mark
       fill: #5FAA82 !important
     #seed-cover
